Design der BlogPosts verbessert, Blogposts mit richtigen Inhalten gefüllt, Vorteile Navigation Abstände verbessert, Vorteile mobile-Ansicht verbessert

--- a/blogposts/blogpost1/blogpost1.html
+++ b/blogposts/blogpost1/blogpost1.html
@@ -40,70 +40,28 @@
     </div>
 </nav>
 
-<div class="container">
-    <h1>Messeautritt InnoTrans 2020</h1>
-    <p>12.12.2020</p>
-    <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
-        dolore magna aliquyam erat,
-        sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea
-        takimata sanctus est Lorem
-        ipsum dolor sit amet. Lorem ipsum.
-        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
-        dolore magna aliquyam erat,
-        sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea
-        takimata sanctus est Lorem
-        ipsum dolor sit amet. Lorem ipsum.
-        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
-        dolore magna aliquyam erat,
-        sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea
-        takimata sanctus est Lorem
-        ipsum dolor sit amet. Lorem ipsum.
-        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
-        dolore magna aliquyam erat,
-        sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea
-        takimata sanctus est Lorem
-        ipsum dolor sit amet. Lorem ipsum.
-        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
-        dolore magna aliquyam erat,
-        sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea
-        takimata sanctus est Lorem
-        ipsum dolor sit amet. Lorem ipsum.
-        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
-        dolore magna aliquyam erat,
-        sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea
-        takimata sanctus est Lorem
-        ipsum dolor sit amet. Lorem ipsum.
-        dolore magna aliquyam erat,
-        sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea
-        takimata sanctus est Lorem
-        ipsum dolor sit amet. Lorem ipsum.
-        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
-        dolore magna aliquyam erat,
-        sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea
-        takimata sanctus est Lorem
-        ipsum dolor sit amet. Lorem ipsum.
-        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
-        dolore magna aliquyam erat,
-        sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea
-        takimata sanctus est Lorem
-        ipsum dolor sit amet. Lorem ipsum.
-        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
-        dolore magna aliquyam erat,
-        sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea
-        takimata sanctus est Lorem
-        ipsum dolor sit amet. Lorem ipsum.
-        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
-        dolore magna aliquyam erat,
-        sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea
-        takimata sanctus est Lorem
-        ipsum dolor sit amet. Lorem ipsum.
-        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
-        dolore magna aliquyam erat,
-        sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea
-        takimata sanctus est Lorem
-        ipsum dolor sit amet. Lorem ipsum.
+<!--Zurück zur Aktuelles-Übersicht-Button-->
+<div class="container zurueck">
+    <a href="/ws3-projekt/aktuelles.html">Zurück</a>
+</div>
+
+<!-------------------------------------------------CONTENT----------------------------------------->
+
+<!--Titel-->
+<div class="container amber lighten-1 amber-text text-lighten-5 blogTitleBox fontSizeStandartTitle center-align">
+    <span>Messeauftritt InnoTrans 2020</span>
+</div>
+
+<div class="container blog">
+<!--BlogDatum-->
+    <p class="blogDate">12.01.2020</p>
+<!--BlogText-->
+    <p>Der neue Kompressor wird bei der InnoTrans, welche vom 22.-25. September 2020 in Berlin stattfindet vorgestellt.<br>
+        Weitere Informationen zur Messe erhalten Sie unter: <a href="https://www.innotrans.com/" target="_blank">https://www.innotrans.com/</a>
     </p>
 </div>
+
+<!-----------------------------------CONTENT-ENDE-------------------------------------------------->
 
 <!--Footer-->
 <footer class="page-footer blue1 blue1-text text-light2">
