--- a/blogposts/blogpost3/blogpost3.html
+++ b/blogposts/blogpost3/blogpost3.html
@@ -40,70 +40,30 @@
     </div>
 </nav>
 
-<div class="container">
-    <h1>Teilnahme Artur Fischer Erfinderpreis Baden-Württemberg 2019</h1>
-    <p>12.04.2019</p>
-    <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
-        dolore magna aliquyam erat,
-        sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea
-        takimata sanctus est Lorem
-        ipsum dolor sit amet. Lorem ipsum.
-        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
-        dolore magna aliquyam erat,
-        sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea
-        takimata sanctus est Lorem
-        ipsum dolor sit amet. Lorem ipsum.
-        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
-        dolore magna aliquyam erat,
-        sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea
-        takimata sanctus est Lorem
-        ipsum dolor sit amet. Lorem ipsum.
-        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
-        dolore magna aliquyam erat,
-        sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea
-        takimata sanctus est Lorem
-        ipsum dolor sit amet. Lorem ipsum.
-        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
-        dolore magna aliquyam erat,
-        sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea
-        takimata sanctus est Lorem
-        ipsum dolor sit amet. Lorem ipsum.
-        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
-        dolore magna aliquyam erat,
-        sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea
-        takimata sanctus est Lorem
-        ipsum dolor sit amet. Lorem ipsum.
-        dolore magna aliquyam erat,
-        sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea
-        takimata sanctus est Lorem
-        ipsum dolor sit amet. Lorem ipsum.
-        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
-        dolore magna aliquyam erat,
-        sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea
-        takimata sanctus est Lorem
-        ipsum dolor sit amet. Lorem ipsum.
-        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
-        dolore magna aliquyam erat,
-        sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea
-        takimata sanctus est Lorem
-        ipsum dolor sit amet. Lorem ipsum.
-        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
-        dolore magna aliquyam erat,
-        sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea
-        takimata sanctus est Lorem
-        ipsum dolor sit amet. Lorem ipsum.
-        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
-        dolore magna aliquyam erat,
-        sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea
-        takimata sanctus est Lorem
-        ipsum dolor sit amet. Lorem ipsum.
-        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
-        dolore magna aliquyam erat,
-        sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea
-        takimata sanctus est Lorem
-        ipsum dolor sit amet. Lorem ipsum.
+
+<!--Zurück zur Aktuelles-Übersicht-Button-->
+<div class="container zurueck">
+    <a href="/ws3-projekt/aktuelles.html">Zurück</a>
+</div>
+
+<!-------------------------------------------------CONTENT----------------------------------------->
+
+<!--Titel-->
+<div class="container amber lighten-1 amber-text text-lighten-5 blogTitleBox fontSizeStandartTitle center-align">
+    <span>Auch ein Zulieferer ist begeistert</span>
+</div>
+
+<div class="container blog">
+    <!--BlogDatum-->
+    <p class="blogDate">12.04.2019</p>
+    <!--BlogText-->
+    <p>Auch die Firma Laser-Hub ist von dem Projekt so überzeugt, dass sie auf ihrem Internetauftritt einen Artikel dazu veröffentlichten.
+        Den Artikel finden sie <a href="https://laserhub.com/gastbeitrag-oelfreie-erzeugung-von-druckluft/" target="_blank">hier</a>.
     </p>
 </div>
+
+<!-----------------------------------CONTENT-ENDE-------------------------------------------------->
+
 
 <!--Footer-->
 <footer class="page-footer blue1 blue1-text text-light2">
