--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 
         <div id="vorteile_icons">
             <div class="container">
-                <div class="section">
+                <div class="vorteileSection">
                     <div class="row">
                         <div class="col s2">
                             <div class="circle" id="umweltschutz_icon" onclick="jumptoadvantage('vorteile_container')">
@@ -190,7 +190,9 @@
 
     <div id="vorteile_text">
         <div class="container">
-            <div class="blue1 blue1-text text-light2 titleBox fontSizeStandartTitle left-align showhide"
+
+<!--            Vorteil 1-->
+            <div class="blue2 blue1-text text-light2 vorteileBox fontSizeStandartTitle left-align showhide"
                  onclick='showfunction("umweltschutz", "plus_icon1", "minus_icon1")'> Umweltschutz
                 <i class="material-icons" id="plus_icon1">add</i>
                 <i class="material-icons" id="minus_icon1">remove</i>
@@ -238,7 +240,9 @@
                     </div>
                 </div>
             </div>
-            <div class="blue1 blue1-text text-light2 titleBox fontSizeStandartTitle left-align showhide"
+
+<!--            Vorteil 2-->
+            <div class="blue2 blue1-text text-light2 vorteileBox fontSizeStandartTitle left-align showhide"
                  onclick='showfunction("vorteil2", "plus_icon2", "minus_icon2")'> Vorteil 2
                 <i class="material-icons" id="plus_icon2">add</i>
                 <i class="material-icons" id="minus_icon2">remove</i>
@@ -285,7 +289,9 @@
                     </p>
                 </div>
             </div>
-            <div class="blue1 blue1-text text-light2 titleBox fontSizeStandartTitle left-align showhide"
+
+<!--            Vorteil 3-->
+            <div class="blue2 blue1-text text-light2 vorteileBox fontSizeStandartTitle left-align showhide"
                  onclick='showfunction("vorteil3", "plus_icon3", "minus_icon3")'> Vorteil 3
                 <i class="material-icons" id="plus_icon3">add</i>
                 <i class="material-icons" id="minus_icon3">remove</i>
@@ -332,7 +338,9 @@
                     </p>
                 </div>
             </div>
-            <div class="blue1 blue1-text text-light2 titleBox fontSizeStandartTitle left-align showhide"
+
+<!--            Vorteil 4-->
+            <div class="blue2 blue1-text text-light2 vorteileBox fontSizeStandartTitle left-align showhide"
                  onclick='showfunction("vorteil4", "plus_icon4", "minus_icon4")'> Vorteil 4
                 <i class="material-icons" id="plus_icon4">add</i>
                 <i class="material-icons" id="minus_icon4">remove</i>
@@ -379,7 +387,9 @@
                     </p>
                 </div>
             </div>
-            <div class="blue1 blue1-text text-light2 titleBox fontSizeStandartTitle left-align showhide"
+
+<!--            Vorteil 5-->
+            <div class="blue2 blue1-text text-light2 vorteileBox fontSizeStandartTitle left-align showhide"
                  onclick='showfunction("vorteil5", "plus_icon5", "minus_icon5")'> Vorteil 5
                 <i class="material-icons" id="plus_icon5">add</i>
                 <i class="material-icons" id="minus_icon5">remove</i>
@@ -426,7 +436,9 @@
                     </p>
                 </div>
             </div>
-            <div class="blue1 blue1-text text-light2 titleBox fontSizeStandartTitle left-align showhide"
+
+<!--            Vorteil 6-->
+            <div class="blue2 blue1-text text-light2 vorteileBox fontSizeStandartTitle left-align showhide"
                  onclick='showfunction("vorteil6", "plus_icon6", "minus_icon6")'> Vorteil 6
                 <i class="material-icons" id="plus_icon6">add</i>
                 <i class="material-icons" id="minus_icon6">remove</i>
