--- a/blogposts/blogpost4/blogpost4.html
+++ b/blogposts/blogpost4/blogpost4.html
@@ -40,70 +40,29 @@
     </div>
 </nav>
 
-<div class="container">
-    <h1>Messeauftritt InnoTrans 2018</h1>
-    <p>12.12.2018</p>
-    <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
-        dolore magna aliquyam erat,
-        sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea
-        takimata sanctus est Lorem
-        ipsum dolor sit amet. Lorem ipsum.
-        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
-        dolore magna aliquyam erat,
-        sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea
-        takimata sanctus est Lorem
-        ipsum dolor sit amet. Lorem ipsum.
-        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
-        dolore magna aliquyam erat,
-        sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea
-        takimata sanctus est Lorem
-        ipsum dolor sit amet. Lorem ipsum.
-        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
-        dolore magna aliquyam erat,
-        sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea
-        takimata sanctus est Lorem
-        ipsum dolor sit amet. Lorem ipsum.
-        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
-        dolore magna aliquyam erat,
-        sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea
-        takimata sanctus est Lorem
-        ipsum dolor sit amet. Lorem ipsum.
-        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
-        dolore magna aliquyam erat,
-        sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea
-        takimata sanctus est Lorem
-        ipsum dolor sit amet. Lorem ipsum.
-        dolore magna aliquyam erat,
-        sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea
-        takimata sanctus est Lorem
-        ipsum dolor sit amet. Lorem ipsum.
-        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
-        dolore magna aliquyam erat,
-        sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea
-        takimata sanctus est Lorem
-        ipsum dolor sit amet. Lorem ipsum.
-        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
-        dolore magna aliquyam erat,
-        sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea
-        takimata sanctus est Lorem
-        ipsum dolor sit amet. Lorem ipsum.
-        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
-        dolore magna aliquyam erat,
-        sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea
-        takimata sanctus est Lorem
-        ipsum dolor sit amet. Lorem ipsum.
-        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
-        dolore magna aliquyam erat,
-        sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea
-        takimata sanctus est Lorem
-        ipsum dolor sit amet. Lorem ipsum.
-        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
-        dolore magna aliquyam erat,
-        sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea
-        takimata sanctus est Lorem
-        ipsum dolor sit amet. Lorem ipsum.
+
+<!--Zurück zur Aktuelles-Übersicht-Button-->
+<div class="container zurueck">
+    <a href="/ws3-projekt/aktuelles.html">Zurück</a>
+</div>
+
+<!-------------------------------------------------CONTENT----------------------------------------->
+
+<!--Titel-->
+<div class="container amber lighten-1 amber-text text-lighten-5 blogTitleBox fontSizeStandartTitle center-align">
+    <span>Erteilung des Patents</span>
+</div>
+
+<div class="container blog">
+    <!--BlogDatum-->
+    <p class="blogDate">20.12.2019</p>
+    <!--BlogText-->
+    <p>Am 15.12.2019 wurde das Patent für den Schrägscheibenkompressor unter Patentnummer 123 erteilt.<br>
     </p>
 </div>
+
+<!-----------------------------------CONTENT-ENDE-------------------------------------------------->
+
 
 <!--Footer-->
 <footer class="page-footer blue1 blue1-text text-light2">
