Aktuelles - Übersicht Design verbessert und richtigen Inhalt eingefüllt

--- a/aktuelles.html
+++ b/aktuelles.html
@@ -53,65 +53,101 @@
                                                                         id="backgroundmenu">menu</i></a>
     </div>
 </nav>
+
+<!--Aktuelles-->
 <div class="container amber lighten-1 amber-text text-lighten-5 titleBox fontSizeStandartTitle center-align">
     <span>Aktuelles</span>
 </div>
-<div id="aktuelles">
-    <!--Blogpost1-->
-    <div class="container">
-        <div class="section">
-            <div class="row postbackground">
-                <div class="col s12 m5 l5"><img class="blogimageindex" src="img/aktuelles_images/InnoTrans2020.jpg">
+
+<div class="container row">
+
+<!------------------------------------ Blogeinträge ------------------------------------------------------------------->
+
+<!--Eintrag 1-->
+    <div class="col s12 m12">
+        <div class="card horizontal small">
+            <!--Bild-->
+            <div class="card-image">
+                <img src="img/aktuelles_images/InnoTrans2020.jpg">
+            </div>
+            <div class="card-stacked">
+                <!--Titel-->
+                <div class="card-content">
+                    <p>Messeauftritt InnoTrans 2020</p>
                 </div>
-                <div class="col s12 m7 l7">
-                    <p class="blogtitle">Messeautritt InnoTrans 2020</p>
-                    <a href="blogposts/blogpost1/blogpost1.html" class="weiterlesen">weiterlesen</a>
+                <!--Link-->
+                <div class="card-action">
+                    <a href="blogposts/blogpost1.html">Artikel lesen</a>
                 </div>
             </div>
         </div>
     </div>
 
-    <!--Blogpost2-->
-    <div class="container">
-        <div class="section">
-            <div class="row postbackground">
-                <div class="col s12 m5 l5"><img class="blogimage"
-                                                src="img/aktuelles_images/Artikel_Fachzeitschrift.png"></div>
-                <div class="col s12 m7 l7">
-                    <p class="blogtitle">Artikel in der Fachzeitschrift MM MaschienenMarkt</p>
-                    <a href="blogposts/blogpost2/blogpost2.html" class="weiterlesen">weiterlesen</a>
+
+<!--Eintrag 2-->
+    <div class="col s12 m12">
+        <div class="card horizontal small">
+            <!--Bild-->
+            <div class="card-image">
+                <img src="img/aktuelles_images/Zug1.jpg">
+            </div>
+            <div class="card-stacked">
+                <!--Titel-->
+                <div class="card-content">
+                    <p>Artikel in der Fachzeitschrift MM Maschienen-Markt</p>
+                </div>
+                <!--Link-->
+                <div class="card-action">
+                    <a href="blogposts/blogpost2.html">Artikel lesen</a>
                 </div>
             </div>
         </div>
     </div>
 
-    <!--Blogpost3-->
-    <div class="container">
-        <div class="section">
-            <div class="row postbackground">
-                <div class="col s12 m5 l5"><img class="blogimage"
-                                                src="img/aktuelles_images/Fischer_Erfinderpreis_2019.jpg"></div>
-                <div class="col s12 m7 l7">
-                    <p class="blogtitle">Teilnahme Artur Fischer Erfinderpreis Baden-Württemberg 2019</p>
-                    <a href="blogposts/blogpost3/blogpost3.html" class="weiterlesen">weiterlesen</a>
+<!--Eintrag 3-->
+    <div class="col s12 m12">
+        <div class="card horizontal small">
+            <!--Bild-->
+            <div class="card-image">
+                <img src="img/aktuelles_images/Pulsmin-kundenstimme-AxialSchraegscheibenKompressor_SB-1.png">
+            </div>
+            <div class="card-stacked">
+                <!--Titel-->
+                <div class="card-content">
+                    <p>Auch ein Zulieferer ist begeistert</p>
+                </div>
+                <!--Link-->
+                <div class="card-action">
+                    <a href="blogposts/blogpost3.html">Artikel lesen</a>
                 </div>
             </div>
         </div>
     </div>
 
-    <!--Blogpost4-->
-    <div class="container">
-        <div class="section">
-            <div class="row postbackground">
-                <div class="col s12 m5 l5"><img class="blogimage" src="img/aktuelles_images/InnoTrans2018.jpg"></div>
-                <div class="col s12 m7 l7">
-                    <p class="blogtitle">Messeautritt InnoTrans 2018</p>
-                    <a href="blogposts/blogpost4/blogpost4.html" class="weiterlesen">weiterlesen</a>
+<!--Eintrag 4-->
+    <div class="col s12 m12">
+        <div class="card horizontal small">
+            <!--Bild-->
+            <div class="card-image">
+                <img src="img/aktuelles_images/Fischer_Erfinderpreis_2019.jpg">
+            </div>
+            <div class="card-stacked">
+                <!--Titel-->
+                <div class="card-content">
+                    <p>Erteilung des Patents</p>
+                </div>
+                <!--Link-->
+                <div class="card-action">
+                    <a href="blogposts/blogpost4.html">Artikel lesen</a>
                 </div>
             </div>
         </div>
     </div>
+
+<!------------------------------------- ENDE - Blogeinträge ----------------------------------------------------------->
+
 </div>
+
 <!--Footer-->
 <footer class="page-footer blue1 blue1-text text-light2">
     <div class="fontSizeStandartTitle center-align footerItem">
