--- a/index.html
+++ b/index.html
@@ -574,19 +574,19 @@
                 <div class="col s12 m4 l4">
                     <img class="blogimageindex" src="img/aktuelles_images/InnoTrans2020.jpg">
                     <p class="blogtitleindex">Messeautritt InnoTrans 2020</p>
-                    <a href="blogposts/blogpost1/blogpost1.html" class="weiterlesenindex">weiterlesen</a>
+                    <a href="blogposts/blogpost1.html" class="weiterlesenindex">weiterlesen</a>
                 </div>
                 <!--Blogpost2-->
                 <div class="col s12 m4 l4">
                     <img class="blogimageindex" src="img/aktuelles_images/Artikel_Fachzeitschrift.png">
                     <p class="blogtitleindex">Artikel in der Fachzeitschrift MM MaschienenMarkt</p>
-                    <a href="blogposts/blogpost2/blogpost2.html" class="weiterlesenindex">weiterlesen</a>
+                    <a href="blogposts/blogpost2.html" class="weiterlesenindex">weiterlesen</a>
                 </div>
                 <!--Blogpost3-->
                 <div class="col s12 m4 l4">
                     <img class="blogimageindex" src="img/aktuelles_images/Fischer_Erfinderpreis_2019.jpg">
                     <p class="blogtitleindex">Teilnahme Artur Fischer Erfinderpreis Baden-Württemberg 2019</p>
-                    <a href="blogposts/blogpost3/blogpost3.html" class="weiterlesenindex">weiterlesen</a>
+                    <a href="blogposts/blogpost3.html" class="weiterlesenindex">weiterlesen</a>
                 </div>
             </div>
         </div>
