--- a/blogposts/blogpost1.html
+++ b/blogposts/blogpost1.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <title>Messeauftritt InnoTrans 2018</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link href="../../css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-    <link href="../../css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+    <link href="../css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+    <link href="../css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 </head>
 <body>
 <!--Header-->
@@ -16,30 +16,29 @@
 
         <ul class="hide-on-med-and-down navmid">
             <li><a class="logo" href="#">pulsmin</a></li>
-            <li><a href="../../index.html">Start</a></li>
-            <li><a href="../../index.html#anwendungsgebietediv">Anwendungsgebiete</a></li>
-            <li><a href="../../index.html#alleinstellungsmerkmalediv">Alleinstellungsmerkmale</a></li>
-            <li><a href="../../index.html#vorteile_container">Vorteile</a></li>
-            <li><a href="../../index.html#technischeangabendiv">Technische Angaben</a></li>
-            <li><a href="../../aktuelles.html">Aktuelles</a></li>
-            <li><a href="../../index.html#kontaktdiv">Kontakt</a></li>
+            <li><a href="../index.html">Start</a></li>
+            <li><a href="../index.html#anwendungsgebietediv">Anwendungsgebiete</a></li>
+            <li><a href="../index.html#alleinstellungsmerkmalediv">Alleinstellungsmerkmale</a></li>
+            <li><a href="../index.html#vorteile_container">Vorteile</a></li>
+            <li><a href="../index.html#technischeangabendiv">Technische Angaben</a></li>
+            <li><a href="../aktuelles.html">Aktuelles</a></li>
+            <li><a href="../index.html#kontaktdiv">Kontakt</a></li>
         </ul>
 
         <ul id="nav-mobile" class="sidenav">
-            <li><a class="logo" href="../../index.html">pulsmin</a></li>
-            <li><a href="../../index.html">Start</a></li>
-            <li><a href="../../index.html#anwendungsgebietediv">Anwendungsgebiete</a></li>
-            <li><a href="../../index.html#alleinstellungsmerkmalediv">Alleinstellungsmerkmale</a></li>
-            <li><a href="../../index.html#vorteile_container">Vorteile</a></li>
-            <li><a href="../../index.html#technischeangabendiv">Technische Angaben</a></li>
-            <li><a href="../../aktuelles.html">Aktuelles</a></li>
-            <li><a href="../../index.html#kontaktdiv">Kontakt</a></li>
+            <li><a class="logo" href="../index.html">pulsmin</a></li>
+            <li><a href="../index.html">Start</a></li>
+            <li><a href="../index.html#anwendungsgebietediv">Anwendungsgebiete</a></li>
+            <li><a href="../index.html#alleinstellungsmerkmalediv">Alleinstellungsmerkmale</a></li>
+            <li><a href="../index.html#vorteile_container">Vorteile</a></li>
+            <li><a href="../index.html#technischeangabendiv">Technische Angaben</a></li>
+            <li><a href="../aktuelles.html">Aktuelles</a></li>
+            <li><a href="../index.html#kontaktdiv">Kontakt</a></li>
         </ul>
         <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons"
                                                                         id="backgroundmenu">menu</i></a>
     </div>
 </nav>
-
 
 <!--Zurück zur Aktuelles-Übersicht-Button-->
 <div class="container zurueck">
@@ -50,19 +49,19 @@
 
 <!--Titel-->
 <div class="container amber lighten-1 amber-text text-lighten-5 blogTitleBox fontSizeStandartTitle center-align">
-    <span>Erteilung des Patents</span>
+    <span>Messeauftritt InnoTrans 2020</span>
 </div>
 
 <div class="container blog">
-    <!--BlogDatum-->
-    <p class="blogDate">20.12.2019</p>
-    <!--BlogText-->
-    <p>Am 15.12.2019 wurde das Patent für den Schrägscheibenkompressor unter Patentnummer 123 erteilt.<br>
+<!--BlogDatum-->
+    <p class="blogDate">12.01.2020</p>
+<!--BlogText-->
+    <p>Der neue Kompressor wird bei der InnoTrans, welche vom 22.-25. September 2020 in Berlin stattfindet vorgestellt.<br>
+        Weitere Informationen zur Messe erhalten Sie unter: <a href="https://www.innotrans.com/" target="_blank">https://www.innotrans.com/</a>
     </p>
 </div>
 
 <!-----------------------------------CONTENT-ENDE-------------------------------------------------->
-
 
 <!--Footer-->
 <footer class="page-footer blue1 blue1-text text-light2">
@@ -106,7 +105,7 @@
 
             <!--Spalte 4-->
             <div class="col l3 m12 s12 center-align">
-                <img src="../../img/footer_images/Hans_Luette.jpg" alt="Hans Lütte" class="circle responsive-img size-100 z-depth-5">
+                <img src="../img/footer_images/Hans_Luette.jpg" alt="Hans Lütte" class="circle responsive-img size-100 z-depth-5">
             </div>
         </div>
     </div>
@@ -120,7 +119,7 @@
 </footer>
 <!--  Scripts-->
 <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-<script src="../../js/materialize.js"></script>
-<script src="../../js/init.js"></script>
+<script src="../js/materialize.js"></script>
+<script src="../js/init.js"></script>
 </body>
 </html>
