--- a/blogposts/blogpost2.html
+++ b/blogposts/blogpost2.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <title>Messeauftritt InnoTrans 2018</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link href="../../css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-    <link href="../../css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+    <link href="../css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+    <link href="../css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 </head>
 <body>
 <!--Header-->
@@ -16,24 +16,24 @@
 
         <ul class="hide-on-med-and-down navmid">
             <li><a class="logo" href="#">pulsmin</a></li>
-            <li><a href="../../index.html">Start</a></li>
-            <li><a href="../../index.html#anwendungsgebietediv">Anwendungsgebiete</a></li>
-            <li><a href="../../index.html#alleinstellungsmerkmalediv">Alleinstellungsmerkmale</a></li>
-            <li><a href="../../index.html#vorteile_container">Vorteile</a></li>
-            <li><a href="../../index.html#technischeangabendiv">Technische Angaben</a></li>
-            <li><a href="../../aktuelles.html">Aktuelles</a></li>
-            <li><a href="../../index.html#kontaktdiv">Kontakt</a></li>
+            <li><a href="../index.html">Start</a></li>
+            <li><a href="../index.html#anwendungsgebietediv">Anwendungsgebiete</a></li>
+            <li><a href="../index.html#alleinstellungsmerkmalediv">Alleinstellungsmerkmale</a></li>
+            <li><a href="../index.html#vorteile_container">Vorteile</a></li>
+            <li><a href="../index.html#technischeangabendiv">Technische Angaben</a></li>
+            <li><a href="../aktuelles.html">Aktuelles</a></li>
+            <li><a href="../index.html#kontaktdiv">Kontakt</a></li>
         </ul>
 
         <ul id="nav-mobile" class="sidenav">
-            <li><a class="logo" href="../../index.html">pulsmin</a></li>
-            <li><a href="../../index.html">Start</a></li>
-            <li><a href="../../index.html#anwendungsgebietediv">Anwendungsgebiete</a></li>
-            <li><a href="../../index.html#alleinstellungsmerkmalediv">Alleinstellungsmerkmale</a></li>
-            <li><a href="../../index.html#vorteile_container">Vorteile</a></li>
-            <li><a href="../../index.html#technischeangabendiv">Technische Angaben</a></li>
-            <li><a href="../../aktuelles.html">Aktuelles</a></li>
-            <li><a href="../../index.html#kontaktdiv">Kontakt</a></li>
+            <li><a class="logo" href="../index.html">pulsmin</a></li>
+            <li><a href="../index.html">Start</a></li>
+            <li><a href="../index.html#anwendungsgebietediv">Anwendungsgebiete</a></li>
+            <li><a href="../index.html#alleinstellungsmerkmalediv">Alleinstellungsmerkmale</a></li>
+            <li><a href="../index.html#vorteile_container">Vorteile</a></li>
+            <li><a href="../index.html#technischeangabendiv">Technische Angaben</a></li>
+            <li><a href="../aktuelles.html">Aktuelles</a></li>
+            <li><a href="../index.html#kontaktdiv">Kontakt</a></li>
         </ul>
         <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons"
                                                                         id="backgroundmenu">menu</i></a>
@@ -106,7 +106,7 @@
 
             <!--Spalte 4-->
             <div class="col l3 m12 s12 center-align">
-                <img src="../../img/footer_images/Hans_Luette.jpg" alt="Hans Lütte" class="circle responsive-img size-100 z-depth-5">
+                <img src="../img/footer_images/Hans_Luette.jpg" alt="Hans Lütte" class="circle responsive-img size-100 z-depth-5">
             </div>
         </div>
     </div>
@@ -120,7 +120,7 @@
 </footer>
 <!--  Scripts-->
 <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-<script src="../../js/materialize.js"></script>
-<script src="../../js/init.js"></script>
+<script src="../js/materialize.js"></script>
+<script src="../js/init.js"></script>
 </body>
 </html>
