Inhalt Blog korrigieren, technische Angaben Farben und Grösse angepassen

--- a/blogposts/blogpost4.html
+++ b/blogposts/blogpost4.html
@@ -57,7 +57,7 @@
     <!--BlogDatum-->
     <p class="blogDate">20.12.2019</p>
     <!--BlogText-->
-    <p>Am 15.12.2019 wurde das Patent für den Schrägscheibenkompressor unter Patentnummer 123 erteilt.<br>
+    <p>Am 19.11.2019 wurde das Patent für den Axial-Schrägscheibenkompressor AKK800T unter der Patentnummer: 10 2017 010 095 erteilt.<br>
     </p>
 </div>
 
