--- a/index.html
+++ b/index.html
@@ -502,10 +502,6 @@
 <div class="container">
     <div class="section">
         <div class="row">
-            <div id="ueberschrift" class="col s12">
-                <h2> Bilder von Kompressor</h2>
-            </div>
-
             <div class="carousel" id="images_carousel" data-indicators="true">
                 <a class="carousel-item" href="#one!"><img src="img/technisch_images/Explosionsdarstellung.PNG"></a>
                 <a class="carousel-item" href="#two!"><img src="img/technisch_images/Kompressor.PNG"></a>
@@ -525,7 +521,7 @@
 <div id="technische_angaben">
     <div class="section">
         <div class="row">
-            <div class="container blue1 blue1-text text-light2 titleBox fontSizeStandartTitle left-align">Allgemeine
+            <div class="container blue2 blue1-text text-light2 vorteileBox fontSizeStandartTitle left-align">Allgemeine
                 Daten
             </div>
             <div class="container">
@@ -540,7 +536,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="container blue1 blue1-text text-light2 titleBox fontSizeStandartTitle left-align">
+            <div class="container blue2 blue1-text text-light2 vorteileBox fontSizeStandartTitle left-align">
                 Eigenschaften
             </div>
             <div class="container">
