--- a/aktuelles.html
+++ b/aktuelles.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:ui="http://java.sun.com/JSP/Page">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
@@ -15,6 +15,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+
+    <!--Load JavaScript-->
+    <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
+    <script type="text/javascript" src="loadComponents.js"></script>
 
     <!-- CSS  -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -144,65 +148,39 @@
         </div>
     </div>
 
+
+    <div class="row">
+        <div class="col s12 m7">
+            <div class="card">
+                <div class="card-image">
+                    <img src="images/sample-1.jpg">
+                    <span class="card-title">Card Title</span>
+                </div>
+                <div class="card-content">
+                    <p>I am a very simple card. I am good at containing small bits of information.
+                        I am convenient because I require little markup to use effectively.</p>
+                </div>
+                <div class="card-action">
+                    <a href="#">This is a link</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
 <!------------------------------------- ENDE - Blogeinträge ----------------------------------------------------------->
 
 </div>
 
+
+
+
+<div id="test"></div>
+
+
 <!--Footer-->
-<footer class="page-footer blue1 blue1-text text-light2">
-    <div class="fontSizeStandartTitle center-align footerItem">
-        <span>Get In Touch</span>
-    </div>
-    <div class="valign-wrapper">
-        <div class="row container">
+<div class="footer"></div>
 
-            <!--Spalte 1-->
-            <div class="col l3 m4 s12 footerItem center-align">
-                <div class="footerItem">
-                    <i class="material-icons">room</i>
-                    <div class="center-align contactSpace">
-                        <span>pulsmin GmbH<br>Hans Luette<br>Seelhofstraße 24<br>D- 79539 Lörrach</span>
-                    </div>
-                </div>
-            </div>
-
-            <!--Spalte 2-->
-            <div class="col l3 m4 s12 footerItem center-align">
-                <!--Phone-->
-                <div class="footerItem">
-                    <i class="material-icons">phone</i>
-                    <div class="center-align contactSpace">
-                        + 49 (0) 7621 169976
-                    </div>
-                </div>
-            </div>
-
-            <!--Spalte 3-->
-            <div class="col l3 m4 s12 footerItem center-align">
-                <!--Email-->
-                <div class="footerItem">
-                    <i class="material-icons">mail</i>
-                    <div class="center-align contactSpace">
-                        info@pulsmin.com
-                    </div>
-                </div>
-            </div>
-
-            <!--Spalte 4-->
-            <div class="col l3 m12 s12 center-align">
-                <img src="img/footer_images/Hans_Luette.jpg" alt="Hans Lütte" class="circle responsive-img size-100 z-depth-5">
-            </div>
-        </div>
-    </div>
-
-    <div class="footer-copyright">
-        <div class="container center-align">
-            Made by <span
-                class="brown-text text-lighten-4"> Lagger Dominique, Tsypkaykina Anastasia & Reinger Lousia</span>
-        </div>
-    </div>
-
-</footer>
 <!--  Scripts-->
 <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 <script src="js/materialize.js"></script>
