Richtiges Startbild einfügen

--- a/blogposts/blogpost1.html
+++ b/blogposts/blogpost1.html
@@ -7,8 +7,17 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="../css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
     <link href="../css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+
+    <!--Load JavaScript-->
+    <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
+    <script type="text/javascript" src="../loadComponents.js"></script>
 </head>
 <body>
+
+<!--Header-->
+<div class="header"></div>
+
+
 <!--Header-->
 <nav id="backgroundnav" role="navigation">
     <a id="logo-container" href="#" class="brand-logo">pulsmin</a>
