moved loadComponents.js

--- a/aktuelles.html
+++ b/aktuelles.html
@@ -17,7 +17,7 @@
 
     <!--Load JavaScript-->
     <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
-    <script type="text/javascript" src="loadComponents.js"></script>
+    <script type="text/javascript" src="js/loadComponents.js"></script>
 
     <!-- CSS  -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
