--- a/blogposts/blogpost1.html
+++ b/blogposts/blogpost1.html
@@ -10,7 +10,7 @@
 
     <!--Load JavaScript-->
     <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
-    <script type="text/javascript" src="../loadComponents.js"></script>
+    <script type="text/javascript" src="../js/loadComponents.js"></script>
 </head>
 <body>
 
