fixed plus minus position vorteile

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <!--Load JavaScript-->
     <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
-    <script type="text/javascript" src="js/loadComponents.js"></script>
+
 
     <!-- CSS  -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -28,7 +28,7 @@
 
 </head>
 <body onresize="showAndhideContent(['umweltschutz', 'vorteil2', 'vorteil3', 'vorteil4', 'vorteil5', 'vorteil6', 'minus_icon1', 'minus_icon2', 'minus_icon3', 'minus_icon4', 'minus_icon5', 'minus_icon6'], ['umweltschutz', 'vorteil2', 'vorteil3', 'vorteil4', 'vorteil5', 'vorteil6'], ['plus_icon1', 'plus_icon2', 'plus_icon3', 'plus_icon4', 'plus_icon5', 'plus_icon6'])"
-      onload="showAndhideContent(['umweltschutz', 'vorteil2', 'vorteil3', 'vorteil4', 'vorteil5', 'vorteil6', 'minus_icon1', 'minus_icon2', 'minus_icon3', 'minus_icon4', 'minus_icon5', 'minus_icon6'], ['umweltschutz', 'vorteil2', 'vorteil3', 'vorteil4', 'vorteil5', 'vorteil6'], [])">
+      onload="showAndhideContent(['umweltschutz', 'vorteil2', 'vorteil3', 'vorteil4', 'vorteil5', 'vorteil6', 'minus_icon1', 'minus_icon2', 'minus_icon3', 'minus_icon4', 'minus_icon5', 'minus_icon6'], ['umweltschutz', 'vorteil2', 'vorteil3', 'vorteil4', 'vorteil5', 'vorteil6'], ['plus_icon1', 'plus_icon2', 'plus_icon3', 'plus_icon4', 'plus_icon5', 'plus_icon6'])">
 
 
 <!--Header-->
@@ -61,6 +61,7 @@
 <!--  Scripts-->
 <script type="text/javascript" src="js/advantages.js"></script>
 <script type="text/javascript" src="js/navbar.js"></script>
+<script type="text/javascript" src="js/loadComponents.js"></script>
 <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 <script src="js/materialize.js"></script>
 <script src="js/init.js"></script>
