--- a/aktuelles.html
+++ b/aktuelles.html
@@ -3,7 +3,10 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <title>Aktuelles</title>
+
+    <!--    title & icon-->
+    <title>pulsmin</title>
+    <link rel="icon" href="img/pulsmin_Icon.svg">
 
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
