--- a/aktuelles.html
+++ b/aktuelles.html
@@ -65,119 +65,81 @@
     <span>Aktuelles</span>
 </div>
 
+
 <div class="container row">
 
 <!------------------------------------ Blogeinträge ------------------------------------------------------------------->
-
-<!--Eintrag 1-->
-    <div class="col s12 m12">
-        <div class="card horizontal small">
-            <!--Bild-->
-            <div class="card-image">
-                <img src="img/aktuelles_images/InnoTrans2020.jpg">
-            </div>
-            <div class="card-stacked">
-                <!--Titel-->
-                <div class="card-content">
-                    <p>Messeauftritt InnoTrans 2020</p>
+    <div id="aktuelles">
+        <!--Blogpost1-->
+        <div class="container">
+            <div class="section">
+                <div class="row postbackground val">
+                    <!--                Bild-->
+                    <div class="col s12 m5 l5"><img class="blogimage" src="img/aktuelles_images/InnoTrans2020.jpg">
+                    </div>
+                    <div class="col s12 m7 l7">
+                        <!--                    Titel-->
+                        <p class="blogtitle">Messeauftritt InnoTrans 2020</p>
+                        <!--                    Link-->
+                        <a href="blogposts/blogpost1.html" class="weiterlesen">Artikel lesen</a>
+                    </div>
                 </div>
-                <!--Link-->
-                <div class="card-action">
-                    <a href="blogposts/blogpost1.html">Artikel lesen</a>
+            </div>
+        </div>
+
+        <!--Blogpost2-->
+        <div class="container">
+            <div class="section">
+                <div class="row postbackground val">
+                    <!--                Bild-->
+                    <div class="col s12 m5 l5"><img class="blogimage"
+                                                    src="img/aktuelles_images/Zug1.jpg"></div>
+                    <div class="col s12 m7 l7">
+                        <!--                    Titel-->
+                        <p class="blogtitle">Artikel in der Fachzeitschrift MM Maschienen-Markt</p>
+                        <!--                    Link-->
+                        <a href="blogposts/blogpost2.html" class="weiterlesen">Artikel lesen</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!--Blogpost3-->
+        <div class="container">
+            <div class="section">
+                <div class="row postbackground val">
+                    <!--                Bild-->
+                    <div class="col s12 m5 l5"><img class="blogimage"
+                                                    src="img/aktuelles_images/Pulsmin-kundenstimme-AxialSchraegscheibenKompressor_SB-1.png"></div>
+                    <div class="col s12 m7 l7">
+                        <!--                    Titel-->
+                        <p class="blogtitle">Auch ein Zulieferer ist begeistert</p>
+                        <!--                    Link-->
+                        <a href="blogposts/blogpost3.html" class="weiterlesen">Artikel lesen</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!--Blogpost4-->
+        <div class="container">
+            <div class="section">
+                <div class="row postbackground val">
+                    <!--                Bild-->
+                    <div class="col s12 m5 l5"><img class="blogimage" src="img/aktuelles_images/Fischer_Erfinderpreis_2019.jpg"></div>
+                    <div class="col s12 m7 l7">
+                        <!--                    Titel-->
+                        <p class="blogtitle">Erteilung des Patents</p>
+                        <!--                    Link-->
+                        <a href="blogposts/blogpost4.html" class="weiterlesen">Artikel lesen</a>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-
-
-<!--Eintrag 2-->
-    <div class="col s12 m12">
-        <div class="card horizontal small">
-            <!--Bild-->
-            <div class="card-image">
-                <img src="img/aktuelles_images/Zug1.jpg">
-            </div>
-            <div class="card-stacked">
-                <!--Titel-->
-                <div class="card-content">
-                    <p>Artikel in der Fachzeitschrift MM Maschienen-Markt</p>
-                </div>
-                <!--Link-->
-                <div class="card-action">
-                    <a href="blogposts/blogpost2.html">Artikel lesen</a>
-                </div>
-            </div>
-        </div>
-    </div>
-
-<!--Eintrag 3-->
-    <div class="col s12 m12">
-        <div class="card horizontal small">
-            <!--Bild-->
-            <div class="card-image">
-                <img src="img/aktuelles_images/Pulsmin-kundenstimme-AxialSchraegscheibenKompressor_SB-1.png">
-            </div>
-            <div class="card-stacked">
-                <!--Titel-->
-                <div class="card-content">
-                    <p>Auch ein Zulieferer ist begeistert</p>
-                </div>
-                <!--Link-->
-                <div class="card-action">
-                    <a href="blogposts/blogpost3.html">Artikel lesen</a>
-                </div>
-            </div>
-        </div>
-    </div>
-
-<!--Eintrag 4-->
-    <div class="col s12 m12">
-        <div class="card horizontal small">
-            <!--Bild-->
-            <div class="card-image">
-                <img src="img/aktuelles_images/Fischer_Erfinderpreis_2019.jpg">
-            </div>
-            <div class="card-stacked">
-                <!--Titel-->
-                <div class="card-content">
-                    <p>Erteilung des Patents</p>
-                </div>
-                <!--Link-->
-                <div class="card-action">
-                    <a href="blogposts/blogpost4.html">Artikel lesen</a>
-                </div>
-            </div>
-        </div>
-    </div>
-
-
-    <div class="row">
-        <div class="col s12 m7">
-            <div class="card">
-                <div class="card-image">
-                    <img src="images/sample-1.jpg">
-                    <span class="card-title">Card Title</span>
-                </div>
-                <div class="card-content">
-                    <p>I am a very simple card. I am good at containing small bits of information.
-                        I am convenient because I require little markup to use effectively.</p>
-                </div>
-                <div class="card-action">
-                    <a href="#">This is a link</a>
-                </div>
-            </div>
-        </div>
-    </div>
-
-
 <!------------------------------------- ENDE - Blogeinträge ----------------------------------------------------------->
 
 </div>
-
-
-
-
-<div id="test"></div>
 
 
 <!--Footer-->
