--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
     <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 
 </head>
-<body onresize="showAndhideContent(['umweltschutz', 'vorteil2', 'vorteil3', 'vorteil4', 'vorteil5', 'vorteil6', 'minus_icon1', 'minus_icon2', 'minus_icon3', 'minus_icon4', 'minus_icon5', 'minus_icon6'], ['umweltschutz', 'vorteil2', 'vorteil3', 'vorteil4', 'vorteil5', 'vorteil6'], ['plus_icon1', 'plus_icon2', 'plus_icon3', 'plus_icon4', 'plus_icon5', 'plus_icon6'])"
-      onload="showAndhideContent(['umweltschutz', 'vorteil2', 'vorteil3', 'vorteil4', 'vorteil5', 'vorteil6', 'minus_icon1', 'minus_icon2', 'minus_icon3', 'minus_icon4', 'minus_icon5', 'minus_icon6'], ['umweltschutz', 'vorteil2', 'vorteil3', 'vorteil4', 'vorteil5', 'vorteil6'], ['plus_icon1', 'plus_icon2', 'plus_icon3', 'plus_icon4', 'plus_icon5', 'plus_icon6'])">
+<body onresize="showAndhideContent(['vorteil1', 'vorteil2', 'vorteil3', 'vorteil4', 'vorteil5', 'vorteil6', 'minus_icon1', 'minus_icon2', 'minus_icon3', 'minus_icon4', 'minus_icon5', 'minus_icon6', 'plus_icon2', 'plus_icon3', 'plus_icon4', 'plus_icon5', 'plus_icon6'], ['vorteil1', 'vorteil2', 'vorteil3', 'vorteil4', 'vorteil5', 'vorteil6'], ['plus_icon1', 'plus_icon2', 'plus_icon3', 'plus_icon4', 'plus_icon5', 'plus_icon6'])"
+      onload="showAndhideContent(['vorteil1', 'vorteil2', 'vorteil3', 'vorteil4', 'vorteil5', 'vorteil6', 'minus_icon1', 'minus_icon2', 'minus_icon3', 'minus_icon4', 'minus_icon5', 'minus_icon6', 'plus_icon2', 'plus_icon3', 'plus_icon4', 'plus_icon5', 'plus_icon6'], ['vorteil1', 'vorteil2', 'vorteil3', 'vorteil4', 'vorteil5', 'vorteil6'], ['plus_icon1', 'plus_icon2', 'plus_icon3', 'plus_icon4', 'plus_icon5', 'plus_icon6'])">
 
 
 <!--Header-->
