--- a/index.html
+++ b/index.html
@@ -34,7 +34,33 @@
 
 
 <!--Header-->
-<div class="header"></div>
+<nav id="backgroundnav" role="navigation">
+    <a id="logo-container" href="#" class="brand-logo">pulsmin</a>
+    <div class="nav-wrapper">
+
+        <ul class="hide-on-med-and-down navmid">
+            <li><a class="logo" href="#">pulsmin</a></li>
+            <li><a href="#anwendungsgebietediv">Anwendungsgebiete</a></li>
+            <li><a href="#alleinstellungsmerkmalediv">Alleinstellungsmerkmale</a></li>
+            <li><a href="#vorteile_container">Vorteile</a></li>
+            <li><a href="#technischeangabendiv">Technische Angaben</a></li>
+            <li><a href="aktuelles.html">Aktuelles</a></li>
+            <li><a href="#kontaktdiv">Kontakt</a></li>
+        </ul>
+
+        <ul id="nav-mobile" class="sidenav">
+            <li><a class="logo" href="#" onclick="location.reload()">pulsmin</a></li>
+            <li><a href="#anwendungsgebietediv" onclick="location.reload()">Anwendungsgebiete</a></li>
+            <li><a href="#alleinstellungsmerkmalediv" onclick="location.reload()">Alleinstellungsmerkmale</a></li>
+            <li><a href="#vorteile_container" onclick="location.reload()">Vorteile</a></li>
+            <li><a href="#technischeangabendiv" onclick="location.reload()">Technische Angaben</a></li>
+            <li><a href="aktuelles.html" onclick="location.reload()">Aktuelles</a></li>
+            <li><a href="#kontaktdiv" onclick="location.reload()">Kontakt</a></li>
+        </ul>
+        <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons"
+                                                                        id="backgroundmenu">menu</i></a>
+    </div>
+</nav>
 
 <!--Startbildschirm-->
 <div class="start"></div>
@@ -62,7 +88,7 @@
 
 <!--  Scripts-->
 <script type="text/javascript" src="js/advantages.js"></script>
-<script type="text/javascript" src="js/navbar.js"></script>
+<!-- <script type="text/javascript" src="js/navbar.js"></script> -->
 <script type="text/javascript" src="js/loadComponents.js"></script>
 <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 <script src="js/materialize.js"></script>
