--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <li><a href="#alleinstellungsmerkmalediv" onclick="location.reload()">Alleinstellungsmerkmale</a></li>
             <li><a href="#vorteile_container" onclick="location.reload()">Vorteile</a></li>
             <li><a href="#technischeangabendiv" onclick="location.reload()">Technische Angaben</a></li>
-            <li><a href="aktuelles.html" onclick="location.reload()">Aktuelles</a></li>
+            <li><a href="aktuelles.html">Aktuelles</a></li>
             <li><a href="#kontaktdiv" onclick="location.reload()">Kontakt</a></li>
         </ul>
         <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons"
