--- a/index.html
+++ b/index.html
@@ -75,6 +75,11 @@
 
 <!--Anwendungsgebiete-->
 
+<div id="anwendungsgebietediv"
+     class="container blue1 blue1-text text-light2 titleBox fontSizeStandartTitle center-align">
+    <span>Anwendungsgebiete</span>
+</div>
+
 <div class="anwendungsgebiete">
     <div class="container">
         <div class="section">
@@ -135,6 +140,7 @@
      class="container blue1 blue1-text text-light2 titleBox fontSizeStandartTitle center-align">
     <span>Alleinstellungsmerkmale</span>
 </div>
+
 <div class="section">
     <div class="container">
         <p>In Neufahrzeugen sowie im Modernisierungsmarkt werden heute zunehmend zwei Arten von ölfreien Kompressoren eingesetzt: </p>
