--- a/blogposts/blogpost1.html
+++ b/blogposts/blogpost1.html
@@ -28,8 +28,7 @@
     <div class="nav-wrapper">
 
         <ul class="hide-on-med-and-down navmid">
-            <li><a class="logo" href="#">pulsmin</a></li>
-            <li><a href="../index.html">Start</a></li>
+            <li><a class="logo" href="../index.html">pulsmin</a></li>
             <li><a href="../index.html#anwendungsgebietediv">Anwendungsgebiete</a></li>
             <li><a href="../index.html#alleinstellungsmerkmalediv">Alleinstellungsmerkmale</a></li>
             <li><a href="../index.html#vorteile_container">Vorteile</a></li>
@@ -40,7 +39,6 @@
 
         <ul id="nav-mobile" class="sidenav">
             <li><a class="logo" href="../index.html">pulsmin</a></li>
-            <li><a href="../index.html">Start</a></li>
             <li><a href="../index.html#anwendungsgebietediv">Anwendungsgebiete</a></li>
             <li><a href="../index.html#alleinstellungsmerkmalediv">Alleinstellungsmerkmale</a></li>
             <li><a href="../index.html#vorteile_container">Vorteile</a></li>
@@ -55,7 +53,7 @@
 
 <!--Zurück zur Aktuelles-Übersicht-Button-->
 <div class="container zurueck">
-    <a href="/ws3-projekt/aktuelles.html">Zurück</a>
+    <a href="../aktuelles.html">Zurück</a>
 </div>
 
 <!-------------------------------------------------CONTENT----------------------------------------->
