--- a/blogposts/blogpost4.html
+++ b/blogposts/blogpost4.html
@@ -19,8 +19,7 @@
     <div class="nav-wrapper">
 
         <ul class="hide-on-med-and-down navmid">
-            <li><a class="logo" href="#">pulsmin</a></li>
-            <li><a href="../index.html">Start</a></li>
+            <li><a class="logo" href="../index.html">pulsmin</a></li>
             <li><a href="../index.html#anwendungsgebietediv">Anwendungsgebiete</a></li>
             <li><a href="../index.html#alleinstellungsmerkmalediv">Alleinstellungsmerkmale</a></li>
             <li><a href="../index.html#vorteile_container">Vorteile</a></li>
@@ -31,7 +30,6 @@
 
         <ul id="nav-mobile" class="sidenav">
             <li><a class="logo" href="../index.html">pulsmin</a></li>
-            <li><a href="../index.html">Start</a></li>
             <li><a href="../index.html#anwendungsgebietediv">Anwendungsgebiete</a></li>
             <li><a href="../index.html#alleinstellungsmerkmalediv">Alleinstellungsmerkmale</a></li>
             <li><a href="../index.html#vorteile_container">Vorteile</a></li>
@@ -47,7 +45,7 @@
 
 <!--Zurück zur Aktuelles-Übersicht-Button-->
 <div class="container zurueck">
-    <a href="/ws3-projekt/aktuelles.html">Zurück</a>
+    <a href="../aktuelles.html">Zurück</a>
 </div>
 
 <!-------------------------------------------------CONTENT----------------------------------------->
