--- a/aktuelles.html
+++ b/aktuelles.html
@@ -34,7 +34,7 @@
     <div class="nav-wrapper">
 
         <ul class="hide-on-med-and-down navmid">
-            <li><a class="logo" href="#">pulsmin</a></li>
+            <li><a class="logo" href="index.html">pulsmin</a></li>
             <li><a href="index.html#anwendungsgebietediv">Anwendungsgebiete</a></li>
             <li><a href="index.html#alleinstellungsmerkmalediv">Alleinstellungsmerkmale</a></li>
             <li><a href="index.html#vorteile_container">Vorteile</a></li>
